Version 0.6.3:
	* Fix traceback when there are packages with same name but with different
	  case (muse vs MuSE rhbz#484525)
	* Use DISTINCT when listing packages in RPM group pages.
	* Import md5 as hashlib for compatibility with future pythons.
	* Fix URLs to point to the fedorahosted.org location.

Version 0.6.2:
	* Fix traceback when there are non-unique group names (bz#300151, #4)
	* Use gmtime instead of localtime when generating rss
	* Expose rpm_sourcerpm in repoview pkg_data dict (#3)
	* Apply utf-8 patch from kkofler (#2)

Version 0.6.1:
	* Allow blank changelogs (bug #8)
	* Fix traceback when group names have case differences (rh #300151)
	* Add a --comps cmdline option to allow for external comps files
	* Allow google-indexing of the index page, to make it easier to find
	  mirrors.

Version 0.6.0:
	* Big rewrite that breaks all compatibility with previous versions, except
	  for most command-line switches.
	* Introduces state-tracking, so small changes to the respository will
	  result in very fast execution.
	* Reduces memory footprint.
	* The above two changes have come at the sacrifice of elegance. Please
	  excuse me for fairly messy code.
	* Drop support for yum < 3.0
	* Require repositories with .sqlite data (createrepo -d)

Version 0.5.2:
	* Webify more strings (Eric Lassauge)
	* Use os.* functions for some shutil calls for older python (#551)
	* Don't ignore --quiet (#589)
	* Misc small fixes (#588, #590)
	* Drop specfile from the tarball

Version 0.5.1:
	* Hack around the comps.xml API changes in yum-2.5.x

Version 0.5:
	* Switch to optparse. This may break older Pythons, not sure.
	* Dropped "-t toplevel" switch, since it complicated the code
	  a lot and not used by anyone, to my knowledge.
	* Moved "-l title" to "-t title" with a deprecation note in place.
	* Added RSS generation routines. Template for the entries is in
	  kid.rss. Feed published into repodata/latest-feed.xml. To enable